--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,14 @@ homepage = "https://github.com/SF-Zhou/baidu_rpc_meta"
 repository = "https://github.com/SF-Zhou/baidu_rpc_meta"
 
 [dependencies]
+bytes = "^1.5"
 futures = "^0.3"
 pilota = "^0.9"
 volo = "^0.8"
 volo-grpc = "0.8"
 
 [build-dependencies]
-volo-build = "^0.8"
+proto-build = { path = "../proto-build" }
 
 [dev-dependencies]
-bytes = "^1.5"
+futures = "^0.3"
